# AlgoToolkit

./: .gitignore  .gitignore.swp  CMakeLists.txt  Doxyfile  LICENSE  MODULE.bazel  README.md  WORKSPACE  bazel-MyAlgorithmicToolkit  bazel-bin  bazel-out  bazel-testlogs  conanfile.txt  debug.out  fmm_test  install.sh  laplacian_solution.vtk  launch_example.sh  run_bencmark.sh  script_test.sh  setup.py  tempCodeRunnerFile.py  tempCodeRunnerFile.sh
.github/workflows/: cmake-single-platform.yml  cmake-single-platform_again.yml
FASTSolver.egg-info/: PKG-INFO
LinearAlgebra/Factorized/: BUILD  basic.hpp  basic_benchmark_test.cpp  basic_test.cpp
LinearAlgebra/Solver/: BUILD  IterSolver.hpp  SolverBase.hpp  solver_test.cpp
application/CFD/: CylinderFlow.cpp  DrivenCavity.cpp  FastPoissonCase.cpp  JetFlow.cpp  MeshCase.cpp  PoissonCase.cpp  TalyorGreenVortex.cpp  TaylorGreenVortex.cpp  VorticityStreamSolver.hpp  cavityflow.cpp  exe1.cpp
application/Laplacian/: exe1.cpp  exe2.cpp
application/LatticeBoltz/: LBMSolver.hpp
application/Mesh/: MeshObj.hpp
application/PostProcess/: ShowVTK.py  Visual.hpp
benchmark/: CavityFlow.cpp  CylinderFlow.cpp  CylinderFlow2D.cpp  CylinderFlow3D.cpp  JetFlow_2D.cpp  JetFlow_3D.cpp  MainTest.cpp  bench_LU.cpp  bench_ODE.cpp  bench_Obj.cpp  bench_Solver.cpp
code/: PDE.ipynb  linearPostProcess.ipynb  test.ipynb  test.py
conan/: conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-armv8.sh  conanrun.sh  conanrunenv-release-armv8.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh
conan/benchmark/: BUILD.bazel
conan/bzip2/: BUILD.bazel
conan/fmt/: BUILD.bazel
conan/gtest/: BUILD.bazel
conan/zlib/: BUILD.bazel
data/: Chem97ZtZ.tar  bcsstk08.tar
doc/html/: doxygen_crawl.html
doc/html/search/: all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_8.js  all_b.js  pages_0.js  pages_2.js  searchdata.js
doc/latex/: md__r_e_a_d_m_e.tex  refman.tex
document/html/: index.html  md__r_e_a_d_m_e.html  pages.html
document/html/search/: all_3.js  all_7.js  all_9.js  all_d.js  pages_1.js
examples/: CylinderFlow.cpp  CylinderFlowSEM.cpp  JetFlow.cpp  JetFlow_2D.cpp
fastsolver.egg-info/: PKG-INFO
main/: BUILD  ConjugateGradient_test.cpp  GMRES_test.cpp  KrylovSubspace_test.cpp  LU_test.cpp  MultiGrid_test.cpp  SparseMatrixCSCTest.cpp  basic_benchmark_test.cpp  basic_test.cpp  debuglogger.cpp  demo.cpp  itersolver_benchmark_test.cpp  itersolver_test.cpp  matrix_benchmark_test.cpp  matrix_obj_test.cpp
output/cavity_flow/: cavity_flow_0.vtk
python/: pybind.cpp  python_c++.ipynb
src/: utils.hpp
src/ Optimization/: TrustRegion.hpp
src/DomainDecomposition/: DomainDecomposition.hpp
src/IO/: VTKWriter.hpp
src/Intergal/: GaussianQuad.hpp
src/LinearAlgebra/Factorized/: basic.hpp
src/LinearAlgebra/FastMultipole/: FMM.hpp
src/LinearAlgebra/Krylov/: ConjugateGradient.hpp  GMRES.hpp  KrylovSubspace.hpp  temp
src/LinearAlgebra/Nonlinear/: NewtonMethod.hpp
src/LinearAlgebra/Preconditioner/: ILU.hpp  LU.hpp  MultiGrid.hpp
src/LinearAlgebra/Solver/: IterSolver.hpp  SolverBase.hpp
src/Mesh/: SU2Mesh.hpp  SU2MeshAdapter.hpp
src/ODE/: RungeKutta.hpp
src/Optimization/: TrustRegion.hpp
src/PDEs/: SpectralElemMethod.hpp  SpectralElementMethod.hpp  tempCodeRunnerFile.hpp
src/PDEs/FDM/: Laplacian.hpp  NavierStoke.hpp  Poisson.hpp  SU2Helper.hpp
src/PDEs/FFT/: FastNavierStoke.hpp  FastPoisson.hpp
src/PDEs/Mesh/: Adaptor.hpp  MeshObj.hpp
src/PDEs/SU2Mesh/: readMesh.hpp
src/Regression/: LinearRegress.hpp
src/SparseLinearAlgebra/: DirectSolve.hpp  SparseBasic.cpp  SparseBasic.hpp
test/: ConjugateGradient_test.cpp  GMRES_test.cpp  GaussianQuad_test.cpp  ILU_test.cpp  LBMSolver_test.cpp  LU_test.cpp  MeshObj_test.cpp  NewtonMethod_test.cpp  RungeKutta_test.cpp  SU2MeshAdapter_test.cpp  SVD_test.cpp  SparseMatrixCSCTest.cpp  SpectralElementMethod_test.cpp  Visual_test.cpp  basic_test.cpp  debuglogger.cpp  itersolver_test.cpp  testfile.cpp
tests/: Cholesky_test.cpp  DirectLU_test.cpp  FMM_test.cpp  GaussianQuad_test.cpp  KrylovSubspace_test.cpp  LU_test.cpp  MeshObj_test.cpp  MultiGrid_test.cpp  SparseMatrixCSCTest.cpp  Visual_test.cpp  itersolver_test.cpp  matrix_obj_test.cpp  test.cpp  test_linearRegress.cpp  test_sparseBasic.cpp
tests/LinearAlgebra/Factorized/: basic_test.cpp
