# Components precompiled libs
# Root package precompiled libs
cc_import(
    name = "bz2_precompiled",
    static_library = "lib/libbz2.a",
)

# Components libraries declaration
# Package library declaration
cc_library(
    name = "bzip2",
    hdrs = glob([
        "include/**",
    ]),
    includes = [
        "include",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # do not sort
        ":bz2_precompiled",
    ],
)

# Filegroup library declaration
filegroup(
    name = "bzip2_binaries",
    srcs = glob([
        "bin/**",
    ]),
    visibility = ["//visibility:public"],
)
